<resources>
    <string name="app_name">Alfie\'s App</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="AdminLogin">Admin Login</string>
    
    <string name="homepage">Home Page</string>
    <string name="logoDescript">
            The logo of the developer group of this app, Anonymous Headlights.
            The logo shows a silhouette of a male deer in front of headlights.
    </string>
    
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="overmorrow">Overmorrow</string>
    <string name="goToCalen">Go To Full Calendar</string>
    
    <string name="no_settings">Notification Settings</string>
    <string name="ad_login">Admin Login</string>
    <string name="ad_event">Add Event</string>

    <string name="string_edit">Edit</string>
    <string name="string_delete">Delete</string>
    <string name="string_save">Save</string>
    <string name="ev_details">Event Details</string>
    <string name="event">Event: </string>
    <string name="string_desc">Description: </string>


    <string name="string_name">Name: </string>
    <string name="string_building">Building: </string>
    <string name="string_room">Room: </string>
    <string name="string_date">Date: </string>
    <string name="string_time">Time: </string>
    <string name="string_details">Details: </string>
    
    <!-- notification settings -->
    <string name="notifications">Notification Settings</string>
    <string name="allNotifStr">Turn On All Notifications</string>
    <string name="kennedy">Kennedy Sports and Recreation Center</string>
    <string name="ellis">Ellis Hall</string>
    <string name="vlb">Suzzane von Liebig Center for Science</string>
    <string name="bac">Brumbaugh Academic Center</string>
    <string name="theatre">Halbritter Center for the Performing Arts</string>
    <string name="good">Good Hall</string>
    <string name="founders">Founders Hall</string>
    <string name="library">Beeghly Library</string>
    <string name="museum">Juniata College Museum of Art</string>
    <string name="gibbel">Henry H. and Joanie R. Gibbel Stadium</string>
    <string name="knox">Knox Stadium</string>
    
</resources>
